[gd_scene load_steps=29 format=2]

[ext_resource path="res://dungeontileset-extended.png" type="Texture" id=1]
[ext_resource path="res://Player/player.gd" type="Script" id=2]
[ext_resource path="res://Tools/Sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound-Effects/hit1.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=15]
radius = 6.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=26]
radius = 5.0
height = 6.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 528, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 544, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 592, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 640, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 608, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 528, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 544, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 560, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 576, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 592, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 608, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 624, 64, 16, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Hurt",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.027, 6.13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponSprite/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "basicHurt"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.375, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.380392, 0.380392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "basicIdle"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=19]
resource_name = "basicWalk"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}

[sub_resource type="Animation" id=22]
resource_name = "weaponHurt"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponSprite/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2.57298, 7.11354 ), Vector2( -1.94301, 9.00342 ), Vector2( -2.03302, 3.42377 ), Vector2( -2.70797, 4.09873 ), Vector2( -2.21301, 4.5937 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponSprite/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -125.5, -107.263, -146.843, -143.997, -126.07 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.375, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.380392, 0.380392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "weaponIdle"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -3.02703, 6.12975 ), Vector2( -2.57298, 7.11354 ), Vector2( -2.5982, 7.90814 ), Vector2( -2.18199, 7.49192 ), Vector2( -3.02703, 6.12975 ), Vector2( -2.57298, 7.11354 ), Vector2( -2.5982, 7.90814 ), Vector2( -2.18199, 7.49192 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponSprite/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -138.1, -125.5, -121.4, -125.6, -138.1, -125.5, -121.4, -125.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=21]
resource_name = "weaponWalk"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponSprite/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1.62804, 5.26866 ), Vector2( -1.40307, 3.55876 ), Vector2( -1.40307, 4.50371 ), Vector2( -1.49306, 5.31366 ), Vector2( -1.62804, 5.26866 ), Vector2( -1.40307, 3.55876 ), Vector2( -1.40307, 4.50371 ), Vector2( -1.49306, 5.31366 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponSprite/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -125.061, -111.606, -103.138, -111.742, -125.061, -111.606, -103.138, -111.742 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
WEAPON = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
z_index = 10
shape = SubResource( 15 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.898039, 1, 0, 1 )
z_index = 10
collision_layer = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 26 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 14 )
animation = "Idle"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/basicHurt = SubResource( 17 )
anims/basicIdle = SubResource( 18 )
anims/basicWalk = SubResource( 19 )
anims/weaponHurt = SubResource( 22 )
anims/weaponIdle = SubResource( 20 )
anims/weaponWalk = SubResource( 21 )

[node name="WeaponSprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="WeaponSprite"]
position = Vector2( -3.027, 6.13 )
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 304, 80, 16, 32 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = -6.0
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="damage" from="Hitbox" to="." method="takeDamage"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="animationEnded"]

[editable path="Hitbox"]
